# fau-py-zkp-finance

./: LICENSE  Makefile  README.md  pyproject.toml
zkp/core/: prover.py  verifier.py
zkp/core/data/: models.py
zkp/examples/: transaction.py
zkp/examples/data/: models.py  serializer.py
