[tool.poetry]
name = "fau-py-zkp-finance"
version = "0.1.0"
description = ""
authors = ["ed-turner <edward.turner.careers@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^40.0.2"
pydantic = "^1.10.7"
orjson = "^3.8.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
